service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-app
spec:
  selector:
    app: canary-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
